--- a/style.css
+++ b/style.css
@@ -10,11 +10,13 @@ body {
     width: 13%;
     background-color: #fff;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    height: 100vh;
+    height: 1200px;
     padding: 1rem;
     overflow-y: auto;
 }
 .logo {
+    padding-left: 8%;
+    padding-top: 2%;
     align-self: center;
     margin-bottom: 1rem;
 }
@@ -23,6 +25,16 @@ body {
     list-style: none;
     padding: 0;
     margin: 0;
+}
+.home-item {
+    display: flex;
+    align-items: center;
+    padding: 0.6rem;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background 0.3s;
+    background-color: #ffe8cc;
+    font-weight: bold;
 }
 .contact-item {
     display: flex;
@@ -170,9 +182,9 @@ body {
 
 /* Chatbot Styles */
 .chatBot {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
+    width: 70%;
+    padding: 2rem;
+    background-color: #f5f5f5;
     background: white;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -205,6 +217,25 @@ body {
     list-style: none;
     padding: 0;
     margin: 0;
-    max-height: 200px;
+    /* max-height: 1200px; */
     overflow-y: auto;
+}
+.recommendations-wrapper {
+    display: flex;
+    justify-content: space-evenly; /* Equal spacing between items and edges */
+    gap: 2rem;
+    margin-top: 1rem;
+}
+.rec-profile {
+    text-align: center;
+}
+.rec-profile img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    margin-bottom: 0.5rem;
+}
+.bold_orange {
+    color:#E7880B;
+    font-weight: bold;
 }
